--- a/PassportRecognitionProject/PassportRecognitionProject/PassportRecognitionProject.csproj
+++ b/PassportRecognitionProject/PassportRecognitionProject/PassportRecognitionProject.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataService\DataService.csproj" />
+    <ProjectReference Include="..\ExternalService\ExternalService.csproj" />
+  </ItemGroup>
+
 </Project>
