--- a/PassportRecognitionProject/PassportRecognitionProject/appsettings.json
+++ b/PassportRecognitionProject/PassportRecognitionProject/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExteranlServiceURL": "https://api.regulaforensics.com/api/process"
 }
