--- a/PassportRecognitionProject/PassportRecognitionProject/appsettings.json
+++ b/PassportRecognitionProject/PassportRecognitionProject/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ExteranlServiceURL": "https://api.regulaforensics.com/api/process"
+  "ExternalServiceInfo": {
+    "URL": "https://api.regulaforensics.com/api/process",
+    "ServiceType": 1 // 1 - Regula
+  }
 }
