--- a/PassportRecognitionProject/DataService/DataService.csproj
+++ b/PassportRecognitionProject/DataService/DataService.csproj
@@ -7,5 +7,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
+    <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
